# IfcOpenShell

cmake/: CMakeLists.txt
src/gtest/: CMakeLists.txt  test_ifcclash.cpp
test/: CMakeLists.txt  test_ifcclash.cpp
win/: build-deps.cmd
